Added hover effects

--- a/src/styles/blocks/product-info.scss
+++ b/src/styles/blocks/product-info.scss
@@ -49,6 +49,7 @@
 
     color: #fff;
     border: 1px solid $color-blue;
+    transition: all 0.15s linear;
 
     &:hover {
       background-color: #fff;
