--- a/src/styles/blocks/header-nav.scss
+++ b/src/styles/blocks/header-nav.scss
@@ -34,6 +34,8 @@
     text-transform: uppercase;
     text-decoration: none;
 
+    transition: all 0.15s linear;
+
     &:hover {
       color: $color-blue;
     }
