--- a/src/styles/blocks/product-section.scss
+++ b/src/styles/blocks/product-section.scss
@@ -18,5 +18,15 @@
   &__picture {
     max-width: 160px;
     margin-bottom: 40px;
+    border: 3px solid transparent;
+
+    transition: transform 0.4s linear;
+    transform-origin: center bottom;
+
+    &:hover {
+      border: 3px solid #f3f3f3;
+      transform: scale(1.25);
+      border-radius: 5px;
+    }
   }
 }
