--- a/src/styles/blocks/product-info.scss
+++ b/src/styles/blocks/product-info.scss
@@ -49,7 +49,8 @@
 
     color: #fff;
     border: 1px solid $color-blue;
-    transition: all 0.15s linear;
+    transition: color 0.15s linear,
+      background-color 0.15s linear;
 
     &:hover {
       background-color: #fff;
