--- a/src/styles/blocks/product-section.scss
+++ b/src/styles/blocks/product-section.scss
@@ -19,14 +19,15 @@
     max-width: 160px;
     margin-bottom: 40px;
     border: 3px solid transparent;
+    border-radius: 5px;
 
-    transition: transform 0.4s linear;
+    transition: border-color 0.4s linear,
+      transform 0.4s linear;
     transform-origin: center bottom;
 
     &:hover {
-      border: 3px solid #f3f3f3;
+      border-color: #f3f3f3;
       transform: scale(1.25);
-      border-radius: 5px;
     }
   }
 }
